--- a/index.html
+++ b/index.html
@@ -55,12 +55,15 @@
     <div class="icons">
         <a href="#"><i class="ri-whatsapp-line"></i></a>
         <a href="#"><i class="ri-mail-line"></i></a>
-        <a href="#"></a>
     </div>
 
     <div class="scroll-down">
         <a href="#"><i class="ri-arrow-down-s-line"></i></i></a>
     </div>
+
+    <!--ScrollReveal Effect-->
+    <script src="https://unpkg.com/scrollreveal"></script>
+    
 
     <!-- Custom js -->
     <script src="script.js"></script>
