--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <a href="#" class = "logo" >VIRTUAL HUB</a>
 
         <ul class="navlist">
-            <li><a href="#">Online Apply</a></li>
+            <li><script src="https://www.youtube.com/"></script><a href="#">Online Apply</a></li>
             <li><a href="#">Correction</a></li>
             <li><a href="#">Booking</a></li>
             <li><a href="#">Contact Us</a></li>
